--- a/railway-reservation/pom.xml
+++ b/railway-reservation/pom.xml
@@ -6,7 +6,7 @@
   </properties>
   <parent>
     <groupId>someshbose.github.io</groupId>
-    <artifactId>service-parent</artifactId>
+    <artifactId>zoho-poc-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>railway-reservation</artifactId>
