--- a/tic-tac-toe/pom.xml
+++ b/tic-tac-toe/pom.xml
@@ -1,6 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>somesh.github.io</groupId>
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+  <parent>
+    <groupId>someshbose.github.io</groupId>
+    <artifactId>zoho-poc-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
   <artifactId>tic-tac-toe</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Tic-tac-toe</name>
