guice changes added

--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,17 @@
         <module>railway-reservation</module>
         <module>tic-tac-toe</module>
     </modules>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
