--- a/SplitWise/pom.xml
+++ b/SplitWise/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>zoho-poc-parent</artifactId>
+        <artifactId>lld-poc-parent</artifactId>
         <groupId>someshbose.github.io</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
@@ -12,8 +12,8 @@
     <artifactId>splitwise</artifactId>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
 </project>
