--- a/MessageBroker/pom.xml
+++ b/MessageBroker/pom.xml
@@ -8,13 +8,12 @@
   <artifactId>MessageBroker</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.18.20</version>
-    </dependency>
-  </dependencies>
+  <parent>
+    <artifactId>lld-poc-parent</artifactId>
+    <groupId>someshbose.github.io</groupId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
+
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
